--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.16",
     "@types/express": "^4.17.20",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
